[package]
authors = ["hex1c"]
edition = "2018"
name = "bscscan_wrapper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-rt = "2.2" dev dependency
reqwest = "0.11"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1"