[package]
authors = ["hex1c"]
edition = "2018"
name = "bscscan_wrapper"
version = "0.1.0"
repository="https://github.com/hex1c/bscscan_api_wrapper"
description="This is a wrapper to bscchain api to get data from BSC chain"
keywords = ["binance smart chain", "bsc", "bscchain api"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-rt = "2.2" dev dependency
reqwest = "0.11"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1"